--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.5.1",
     "nprogress": "^0.2.0",
+    "pinia": "^2.0.28",
     "prettier": "^2.7.1",
     "sass": "^1.54.9",
     "vue": "^3.2.37",
